Commit working extractor, progress company xform

--- a/python/src/mediumroast/transformers/company.ini
+++ b/python/src/mediumroast/transformers/company.ini
@@ -4,13 +4,28 @@ description = This is the default company description. If you get this as the de
 industry = Unknown
 cik = Unknown
 stockSymbol = Unknown
-Recent10kURL = Unknown
-Recent10qURL = Unknown
+recent10kURL = Unknown
+recent10qURL = Unknown
+latitude = Unknown
+longitude = Unknown
+phone = Unknown
+url = Unknown
+streetAddress = Unknown
+stateProvince = Unknown
+city = Unknown
+country = Unknown
+region = Unknown
+zipPostal = Unknown
+
 
 [roles]
 Aha = Competitor
 ProductBoard = Competitor
 RoadMunk = Competitor
+DevRev = Competitor
+DoveTail = Competitor
+GitHub = Partner
+Microsoft = Partner
 
 
 [industries]
@@ -44,10 +59,40 @@ Reservok Music = A supporter and marketer of many famous musical brands and arti
 Friendster = One of the original competitors to the Facebook who is now defunct
 Western EU Insurance = Helps EU citizens better sleep at night through novel insurance products
 Ticker = Operates a key market in Western economies
-Aha = The maker of roadmapping and product management technologies
+Aha = A maker of roadmapping and product management technologies
 OneVdoa = A European wireless and wireline communications services provider
 Heller Eherman = An former US law firm dedicated to working with clients on employment and employee matters
 EUIntegrator = A leading European systems integrator that practices business globally with strong reach into enterprise IT
 Web Swap = An online retailer enabling companies to sell directly to consumers and consumers to meet and swap goods and services
 Canyon Bank = A mid-sized bank specialized in regional businesses and financial services
 IT Box Co = A Silicon Valley based ICT company focused on service global customers
+
+[urls]
+
+[countries]
+
+[ciks]
+
+[stockSymbols]
+
+[recent10kURLs]
+
+[recent10qURLs]
+
+[latitudes]
+
+[longitudes]
+
+[phones]
+
+[streetAddresses]
+
+[stateProvinces]
+
+[cities]
+
+[countries]
+
+[regions]
+
+[zips]
