Updated study.ini with DEFAULTs

--- a/python/src/mediumroast/transformers/study.ini
+++ b/python/src/mediumroast/transformers/study.ini
@@ -24,6 +24,43 @@ File Services = Talk to end user customers to discern their needs for NAS and ot
 HyperConverged = Capture what customers want in a product that combines storage a compute in a single platform.
 
 
+[DEFAULT_Questions]
+1 = What is your role in the company?|True|A default and universal question that helps in persona development.
+2 = Can you provide us a brief description of your company?|True|Helps in classifying companies interacted with, and is a part of the default questions.
+
+[DEFAULT_KeyThemes]
+1 = Theme example 1|This is the first example theme assigned to show how themes work|6
+2 = Theme example 2|A second theme example defined to drive the user experience|8
+
+[DEFAULT_KeyTheme_Quotes]
+1 = Here is a quote that is from the ghost in the machine.|Mr. Roast, mediumroast.io
+2 = I can feel this theme in my ghost.|The Major, MegaTech
+
+[DEFAULT_KeyTheme_Mappings]
+1 = mediumroast.io|2,MegaTech|4
+2 = mediumroast.io|4,MegaTech|4
+
+
+[DEFAULT_PRFAQ]
+Introduction = The mediumroast.io will automatically generate key themes, text summaries, and detect relevant snippets from the interactions associated to a study.  
+    It is then up to you to read, digest, and find meaningful points from these interaction data and document them here.  In that spirit this paragraph should be 
+    rewritten based upon your research into these data.
+Opportunity_Text = Opportunies document the real outcomes from your research into the interactions associated to the study.  It is recommended that you write a quick 
+    summary related to core things you have found.
+Opportunity_1 = Transparency - Product or service plans that are completely transparent, to all stakeholders and constitutents, are easy to follow and clear in 
+    direction.  Further inherent transparency enables all involved parties to build community and rally behind your target audience.  The mediumroast.io enables
+    the construction of transparent plans.
+Opportunity_2 = Evidence Based - Too often product, engineering and marketing teams believe in their own vision instead of the vision of their users.  This 
+    misalignment between internal and external visions is evident when plans, for products and services, lack attributable evidence.  That is because it is 
+    impossible to show where key elements, leading to the vision, originated from.  Easily constructing evidence based plans is a key value of the mediumroast.io.
+Opportunity_3 = Community - When different groups have differing opinions on what the future holds for the product or service, the potential for community is
+    dashed.  Using both Transparency and Evidence Based plans the mediumroast.io can be the kernel needed to build up a community that is passionate about
+    user and market needs instead of internal opinion.
+Action_Text = To improve completeness of this study the following actions and next steps are documented with appropriate statuses.
+Action_1 = Augment your study with relevant information, add interactions and companies, and more generally have fun.|Status: In progress
+Action_2 = Activate your mediumroast.io organization and create your first study.|Status: Done
+
+
 [Customer_Insights_Questions]
 1 = Do you know if there are any customer study materials and where you might go to find them?|True|This relates to the history of current content.
 2 = If you are aware of the materials is the current format sufficient or insufficient for your needs?|True|This relates to the history of current content.
@@ -103,13 +140,13 @@ HyperConverged = Capture what customers want in a product that combines storage 
 8 = HDS|14
 9 = HDS|19
 
-[Customer_Insights_Docs]
+[Customer_Insights_PRFAQ]
 Introduction = This Customer Insights study includes two phases separated by 5 years.  The first phase was performed as as a part of a 2014 research project that emphasized A/B testing for a customer study indexing application.
     While the second phase, conducted in late 2019, both uncovered new themes and validated key ideas surfaced in the first phase.  In the second phase the emphasis was to investigate a single competitor/partner candidate, Aha!, to
     to determine if the key themes, detected within the first phase, had or had not been already addressed.  While details are accounted for in the Opportunities section, the conclusion is that the themes still largely remain unsolved
     by companies who build tools for product management, project management, and program management disciplines.  Further, research continues to test both the user experience and refine elements of these
     key themes with product managers at companies like Ring Central, Google, Chaos Search, and so on.
-Opportunity = Overall the two phases of the study were well paired. Essentially both the first and second phases illustrated that product managers need tooling that enable them to discern the whys behind an effort leadning to a
+Opportunity_Text = Overall the two phases of the study were well paired. Essentially both the first and second phases illustrated that product managers need tooling that enable them to discern the whys behind an effort leadning to a
     distillation of whats needed to build an offer.  Thus there is an opportunity to build a product enabling product managers (and potentially customer success managers) to reveal insights from interactions with users, partners and competitors
     powering efforts ranging from from product modernization to new product introduction. Further, competitive insights surfaced in the second phase related to Aha!.  These insights showed that Aha! has yet
     to tackle features that automatically and systematically use interactions to reveal the whys and whats behind product roadmaps.  (Note that Aha! is highly relevant to sense competitive intelligence because
@@ -127,7 +164,10 @@ Opportunity_6 = Intelligent Information Integration by connecting Productivity, 
 Opportunity_7 = Visibility and Reporting for relevant stakeholders by themes, products and customers - Beyond kicking off work with engineering many stakeholders want to understand how whys, encoded in key themes, are being
     resolved.  For example customer success managers will need to know how their customers have affected the roadmap, customers themselves would like to understand their level of influence, and
     marketing teams will want to map features to key user pain points.  This means an offer should enable all interested stakeholders to ask and answer key questions beyond the what is needed to drive a roadmap.
-Actions = To improve completeness of this study the following actions and next steps are documented with appropriate statuses.
-Actions_1 = Synthesize the 2014 and 2019 interactions into a single study, analyze and uncover any weaknesses. | Status: done
-Actions_2 = Perform interviews, document these as interactions and ingest into the mediumroast.io to help remedy the weaknesses of previous interactions. | Status: in process
-Actions_3 = Model and manage this Customer Insights study in the mediumroast.io | Status: in progress
+Opportunity_8 = PRFAQ - In the third round of interviews it has become obvious that the output format should look more like an Amazon PR-FAQ which stands for Press Release and
+    Frequently Asked Questions.  Therefore as we progress towards MVP it will be required to change the report format to PR-FAQ.
+Action_Text = To improve completeness of this study the following actions and next steps are documented with appropriate statuses.
+Action_1 = Synthesize the 2014 and 2019 interactions into a single study, analyze and uncover any weaknesses. | Status: Done
+Action_2 = Perform interviews, document these as interactions and ingest into the mediumroast.io to help remedy the weaknesses of previous interactions. | Status: In process
+Action_3 = Model and manage this Customer Insights study in the mediumroast.io | Status: In process
+Action_4 = Revamp the user experiences and associated backend to follow the new findings. | Status: In process
