85 percent done with study object

--- a/python/src/mediumroast/transformers/study.ini
+++ b/python/src/mediumroast/transformers/study.ini
@@ -1,5 +1,7 @@
 [DEFAULT]
 description = This is the default study description. If you get this as the description please add a specific definition for the study.
+security_scope = False
+groups = users:studyadmin
 
 
 [names]
@@ -23,6 +25,11 @@ HTSM Futures = Understand user/customer needs for tiered storage in the enterpri
 File Services = Talk to end user customers to discern their needs for NAS and other file storage systems.
 HyperConverged = Capture what customers want in a product that combines storage a compute in a single platform.
 
+[groups]
+
+
+[security_scopes]
+
 
 [DEFAULT_Questions]
 1 = What is your role in the company?|True|A default and universal question that helps in persona development.
@@ -36,7 +43,7 @@ HyperConverged = Capture what customers want in a product that combines storage 
 1 = Here is a quote that is from the ghost in the machine.|Mr. Roast, mediumroast.io
 2 = I can feel this theme in my ghost.|The Major, MegaTech
 
-[DEFAULT_KeyTheme_Mappings]
+[DEFAULT_KeyTheme_Frequencies]
 1 = mediumroast.io|2,MegaTech|4
 2 = mediumroast.io|4,MegaTech|4
 
@@ -129,7 +136,7 @@ Action_2 = Activate your mediumroast.io organization and create your first study
     opposed to this is a topic I understand and I’m going to go more grass roots. Existing market: Bottom up, Emerging market: top down.|Charles Hickman, HDS
 
 
-[Customer_Insights_KeyTheme_Mappings]
+[Customer_Insights_KeyTheme_Frequencies]
 1 = Aha|37
 2 = Aha|49
 3 = Aha|15
