Started redefinition of interactions

--- a/python/src/mediumroast/transformers/interaction.ini
+++ b/python/src/mediumroast/transformers/interaction.ini
@@ -1,6 +1,20 @@
 [DEFAULT]
 time = 0000
 description = Learn from COMPANY, either in person or digitally, key points and inputs related to the study STUDYNAME
+contact_name = Unknown
+contact_twitter = Unknown
+contact_email = Unknown
+contact_linkedin = Unknown
+contact_phone = Unknown
+contact_zipPostal = Unknown
+contact_address = Unknown
+type = Interview
+status = Planned
+security_scope = False
+groups = users:studyadmin
+
+
+
 
 
 [statuses]
@@ -8,3 +22,4 @@ description = Learn from COMPANY, either in person or digitally, key points and 
 2 = Scheduled
 3 = Canceled
 4 = Planned
+5 = Unkonwn
