Incremental progress on interaction.py

--- a/python/src/mediumroast/transformers/interaction.ini
+++ b/python/src/mediumroast/transformers/interaction.ini
@@ -12,14 +12,35 @@ type = Interview
 status = Planned
 security_scope = False
 groups = users:studyadmin
+abstract = Unknown
+analyzed = False
 
 
+[times]
 
+[descriptions]
 
+[contact_names]
+
+[contact_twitters]
+
+[contact_emails]
+
+[contact_linkedins]
+
+[contact_phones]
+
+[contact_zipPostals]
+
+[contact_addresses]
+
+[types]
 
 [statuses]
-1 = Completed
-2 = Scheduled
-3 = Canceled
-4 = Planned
-5 = Unkonwn
+
+[security_scopes]
+
+[groups]
+
+[abstracts]
+
