Added cover page

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -2,7 +2,7 @@
 font_type=Avenir Next
 font_size=11
 font_measure=pt
-logo_image=./foo.png
+logo_image=./mr_logo_256H.png
 organization_name=Mediumroast, Inc.
-copy_right_notice=Copyright 2021, Mediumroast, Inc. All rights reserved.
+copyright_notice=Copyright 2021, Mediumroast, Inc. All rights reserved.
 confidential_notice=Company Confidential, Shared under mutual NDA only.
