Incremental update before branching demo

--- a/python/mediumroast/transformers/study.ini
+++ b/python/mediumroast/transformers/study.ini
@@ -147,6 +147,17 @@ Action_2 = Activate your mediumroast.io organization and create your first study
 8 = HDS|14
 9 = HDS|19
 
+[Customer_Insights_KeyTheme_Iteration_Map]
+1 = default
+2 = default
+3 = default
+4 = default
+5 = 1
+6 = 1
+7 = 1
+8 = 1
+9 = 1
+
 [Customer_Insights_PRFAQ]
 Introduction = This Customer Insights study includes two phases separated by 5 years.  The first phase was performed as as a part of a 2014 research project that emphasized A/B testing for a customer study indexing application.
     While the second phase, conducted in late 2019, both uncovered new themes and validated key ideas surfaced in the first phase.  In the second phase the emphasis was to investigate a single competitor/partner candidate, Aha!, to
