Incremental changes for substudies

--- a/python/mediumroast/transformers/study.ini
+++ b/python/mediumroast/transformers/study.ini
@@ -1,7 +1,9 @@
 [DEFAULT]
-description = This is the default study description. If you get this as the description please add a specific definition for the study.
+description = This is the default study description for a mediumroast.io study, please consider making this study your own by rewriting the description.
 security_scope = False
 groups = users:studyadmin
+substudies = default
+substudy_definition = Default Substudy|Every study has the default substudy, and this is the description.  We encourage you to make this substudy unique to your work.
 
 
 [names]
@@ -24,6 +26,11 @@ MG = Delving deeper into understanding enterprise user and customers needs for e
 HTSM Futures = Understand user/customer needs for tiered storage in the enterprise.
 File Services = Talk to end user customers to discern their needs for NAS and other file storage systems.
 HyperConverged = Capture what customers want in a product that combines storage a compute in a single platform.
+
+
+[substudies]
+Customer Insights = default|1|2
+
 
 [groups]
 
@@ -68,7 +75,12 @@ Action_1 = Augment your study with relevant information, add interactions and co
 Action_2 = Activate your mediumroast.io organization and create your first study.|Status: Done
 
 
-[Customer_Insights_Questions]
+[Customer_Insights_Substudy_Definitions]
+default = Problem Discovery|2014 work to initially understand the problem. 
+1 = Competitive Analysis|Late 2019 efforts to understand if Aha! has solved the problem. 
+2 = User Validation|In 2021 evaluate if the problem is still acute and identify target users.
+
+[Customer_Insights_Substudy_Default_Questions]
 1 = Do you know if there are any customer study materials and where you might go to find them?|True|This relates to the history of current content.
 2 = If you are aware of the materials is the current format sufficient or insufficient for your needs?|True|This relates to the history of current content.
 3 = How would you like to explore the materials to get the best possible benefit?|True|Maps to how a user wants to experiencing the content and collateral.
@@ -80,33 +92,23 @@ Action_2 = Activate your mediumroast.io organization and create your first study
 9 = What kinds of discoveries and findings do you anticipate are possible or even relevant?|True|Focuses on what outcomes and consumption practices are needed.
 10 = How do you typically use customer study materials in your plans?|True|Focuses on what outcomes and consumption practices are needed.
 11 = If you do not how do you consolidate your own information to produce release, plan, other content?|True|Focuses on what outcomes and consumption practices are needed.
-12 = Are there other kinds of data to include in conjunction with customer study data/materials, and if so can you describe the data?|False||This is a wrap up question to the interview.
+12 = Are there other kinds of data to include in conjunction with customer study data/materials, and if so can you describe the data?|False|This is a wrap up question to the interview.
 
-
-[Customer_Insights_KeyThemes]
-1 = Standard Interview Process|A consistent approach to performing stakeholder, user and competitive interviews|37
-2 = Standard Interview Tooling|Provide a common set of tooling the enables a standard interview process|49
-3 = Managing Personas|An approach to generating and maintaining personas from your audience|15
-4 = Product Idea Sources|Where and how to capture key ideas for an offer|14
+[Customer_Insights_Substudy_Default_Theme_Definitions]
 5 = Requirements and Planning|What can and should be done with output from customer and competitive research|12
 6 = Personal Strategy|Other uses for customer and competitive insights be used|11
 7 = Concept Validation|Another usage scenario for customer and competitive insight|8
 8 = Abstract to Detailed|How to access and experience insight content|14
 9 = Key-Term Analysis|What the most important approach is to analysis of insight collateral|19
 
+[Customer_Insights_Substudy_Default_Theme_Frequencies]
+5 = HDS|12
+6 = HDS|11
+7 = HDS|8
+8 = HDS|14
+9 = HDS|19
 
-[Customer_Insights_KeyTheme_Quotes]
-1 = Interview recordings is a nice thing to have but honestly I almost never listen to them as it is very time consuming and actually you do not really
-    need every single word the customer said.|Julia Voynova, Aha<->Do not do surveys a lot of people will be seduced by their ease and semi-quantitative nature
-    ... but they are almost NEVER the right tool. Most orgs would be better off completely discarding them. ... The 1:1 interview or user test remains
-    the single best tool for qualitative learning.|Justin Williams, Aha
-2 = So we may choose to keep interview notes in GDrive (or Box or DropBox or SharePoint or iCloud). And presentations for customers wherever our sales
-    team has chosen for internal publishing. And financial projections in whatever FP&A application our company has settled on. Product management has
-    many functional stakeholders, and chances of any single company wide solution are nearly nil.|Rich Mironov, Aha
-3 = Thanks, Todd. I did write user personas for 3 types of users we think would be interested in the product. My challenge is that our CEO who is also
-    the visionary and product owner identified 3 users from anecdotal vs. actual customer interviews in developing the product.|Ruby Menon, Aha
-4 = Start with observing what your prospective customer wants to do, then interview and survey. That will tell you exactly the problem(s) they are
-    trying to solve. Then get your designers and development team involved in identifying innovative ways to help them do it faster and better.|David Fradin, Aha
+[Customer_Insights_Substudy_Default_Theme_Quotes]
 5 = Uh, I think that one of the key things is what are the customer initiatives. This will help me better frame my products and directions accordingly. Level
     of investment from customers as in budget. Are they taking the time to look at competitors. This will help me determine which requirements are the most
     relevant. These kinds of outputs would be great! It would be better than the current state of affairs where we have to continually go back to the field
@@ -135,28 +137,30 @@ Action_2 = Activate your mediumroast.io organization and create your first study
     miss customers that we don’t have or haven’t acquired.|Scott Nacey, HDS<->It depends on whether or not I’m going into an area I don’t know very well as
     opposed to this is a topic I understand and I’m going to go more grass roots. Existing market: Bottom up, Emerging market: top down.|Charles Hickman, HDS
 
+[Customer_Insights_Substudy_1_Theme_Definitions]
+1 = Standard Interview Process|A consistent approach to performing stakeholder, user and competitive interviews|37
+2 = Standard Interview Tooling|Provide a common set of tooling the enables a standard interview process|49
+3 = Managing Personas|An approach to generating and maintaining personas from your audience|15
+4 = Product Idea Sources|Where and how to capture key ideas for an offer|14
 
-[Customer_Insights_KeyTheme_Frequencies]
+[Customer_Insights_Substudy_1_Theme_Frequencies]
 1 = Aha|37
 2 = Aha|49
 3 = Aha|15
 4 = Aha|14
-5 = HDS|12
-6 = HDS|11
-7 = HDS|8
-8 = HDS|14
-9 = HDS|19
 
-[Customer_Insights_KeyTheme_Iteration_Map]
-1 = default
-2 = default
-3 = default
-4 = default
-5 = 1
-6 = 1
-7 = 1
-8 = 1
-9 = 1
+[Customer_Insights_Substudy_1_Theme_Quotes]
+1 = Interview recordings is a nice thing to have but honestly I almost never listen to them as it is very time consuming and actually you do not really
+    need every single word the customer said.|Julia Voynova, Aha<->Do not do surveys a lot of people will be seduced by their ease and semi-quantitative nature
+    ... but they are almost NEVER the right tool. Most orgs would be better off completely discarding them. ... The 1:1 interview or user test remains
+    the single best tool for qualitative learning.|Justin Williams, Aha
+2 = So we may choose to keep interview notes in GDrive (or Box or DropBox or SharePoint or iCloud). And presentations for customers wherever our sales
+    team has chosen for internal publishing. And financial projections in whatever FP&A application our company has settled on. Product management has
+    many functional stakeholders, and chances of any single company wide solution are nearly nil.|Rich Mironov, Aha
+3 = Thanks, Todd. I did write user personas for 3 types of users we think would be interested in the product. My challenge is that our CEO who is also
+    the visionary and product owner identified 3 users from anecdotal vs. actual customer interviews in developing the product.|Ruby Menon, Aha
+4 = Start with observing what your prospective customer wants to do, then interview and survey. That will tell you exactly the problem(s) they are
+    trying to solve. Then get your designers and development team involved in identifying innovative ways to help them do it faster and better.|David Fradin, Aha
 
 [Customer_Insights_PRFAQ]
 Introduction = This Customer Insights study includes two phases separated by 5 years.  The first phase was performed as as a part of a 2014 research project that emphasized A/B testing for a customer study indexing application.
