Initial commit of completed substudies

--- a/python/mediumroast/transformers/interaction.ini
+++ b/python/mediumroast/transformers/interaction.ini
@@ -44,3 +44,39 @@ analyzed = False
 
 [abstracts]
 
+[substudy_mappings]
+201912151800-Customer Insights-Aha = 1
+201912151900-Customer Insights-Aha = 1
+201912152000-Customer Insights-Aha = 1
+201912161800-Customer Insights-Aha = 1
+201912161900-Customer Insights-Aha = 1
+201912162000-Customer Insights-Aha = 1
+201912171800-Customer Insights-Aha = 1
+201912171900-Customer Insights-Aha = 1
+201912172000-Customer Insights-Aha = 1
+201912181800-Customer Insights-Aha = 1
+201912181900-Customer Insights-Aha = 1
+201912182000-Customer Insights-Aha = 1
+201912191800-Customer Insights-Aha = 1
+201912191900-Customer Insights-Aha = 1
+201912192000-Customer Insights-Aha = 1
+201912201800-Customer Insights-Aha = 1
+201912201900-Customer Insights-Aha = 1
+201912202000-Customer Insights-Aha = 1
+201912211800-Customer Insights-Aha = 1
+201912211900-Customer Insights-Aha = 1
+201912212000-Customer Insights-Aha = 1
+201912212100-Customer Insights-Aha = 1
+202107091400-Customer Insights-VMware = 2
+202107231300-Customer Insights-Hitachi = 2
+202107281900-Customer Insights-Google = 2
+202107301345-Customer Insights-Microsoft = 2
+202108031722-Customer Insights-Amazon = 2
+202108041019-Customer Insights-Providence Health and Services = 2
+202108051509-Customer Insights-eBay = 2
+202108091407-Customer Insights-JP Morgan Chase = 2
+202108111451-Customer Insights-Self Employed = 2
+
+
+[iterations_companies]
+
