--- a/python/mediumroast/transformers/study.ini
+++ b/python/mediumroast/transformers/study.ini
@@ -9,7 +9,7 @@ substudy_definition = Default Substudy|Every study has the default substudy, and
 [names]
 MG = Enterprise Storage
 Content Services = Electronically Stored Information
-HDDS Nextgen = %(Content Services)
+HDDS Nextgen = Electronically Stored Information
 OGDM = Oil and Gas Data Manaagement
 HTSM Futures = Enterprise Tiered Storage
 File Services = Enterprise File Storage
@@ -18,7 +18,8 @@ File Services = Enterprise File Storage
 [descriptions]
 Content Services =  Research the potential for bringing new features and functions to the IT Box Co products
     that seek to make file and object storage smarter.
-HDDS Nextgen = %(Content Services)
+HDDS Nextgen = Research the potential for bringing new features and functions to the IT Box Co products
+    that seek to make file and object storage smarter.
 ODGM = A study focused on revealing insights for data management in upstream Oil and Gas.
 Customer Insights = Work to realize a SaaS intently focused on revealing and solving problems for Customer and
     Competitive interactions which can make Customer Success and Product Management disciplines stronger.
@@ -36,23 +37,6 @@ Customer Insights = default|1|2
 
 
 [security_scopes]
-
-
-[DEFAULT_Questions]
-1 = What is your role in the company?|True|A default and universal question that helps in persona development.
-2 = Can you provide us a brief description of your company?|True|Helps in classifying companies interacted with, and is a part of the default questions.
-
-[DEFAULT_KeyThemes]
-1 = Theme example 1|This is the first example theme assigned to show how themes work|6
-2 = Theme example 2|A second theme example defined to drive the user experience|8
-
-[DEFAULT_KeyTheme_Quotes]
-1 = Here is a quote that is from the ghost in the machine.|Mr. Roast, mediumroast.io
-2 = I can feel this theme in my ghost.|The Major, MegaTech
-
-[DEFAULT_KeyTheme_Frequencies]
-1 = mediumroast.io|2,MegaTech|4
-2 = mediumroast.io|4,MegaTech|4
 
 
 [DEFAULT_PRFAQ]
