Updated to handle user supplied noise

--- a/python/mediumroast/transformers/study.ini
+++ b/python/mediumroast/transformers/study.ini
@@ -13,6 +13,8 @@ HDDS Nextgen = Electronically Stored Information
 OGDM = Oil and Gas Data Manaagement
 HTSM Futures = Enterprise Tiered Storage
 File Services = Enterprise File Storage
+IC = Converged Infrastructure
+HyperConverged = Hyper-Converged Infrastructure
 
 
 [descriptions]
@@ -27,6 +29,7 @@ MG = Delving deeper into understanding enterprise user and customers needs for e
 HTSM Futures = Understand user/customer needs for tiered storage in the enterprise.
 File Services = Talk to end user customers to discern their needs for NAS and other file storage systems.
 HyperConverged = Capture what customers want in a product that combines storage a compute in a single platform.
+IC = Evaluate the interest for a single SKU offer that combines compute, network and storage.
 
 
 [substudies]
@@ -59,12 +62,116 @@ Action_1 = Augment your study with relevant information, add interactions and co
 Action_2 = Activate your mediumroast.io organization and create your first study.|Status: Done
 
 
+[Enterprise_Storage_Substudy_Definitions]
+default = Concept Validation|Ensure that the directions for tiered storage management are sound.
+
+[Enterprise_Storage_Substudy_default_Noises]
+1 = ITBoxCo  Tiered Storage Version 1.0
+2 = ITBoxCo
+3 = ITBoxCo’s
+4 = Customer Quotes
+5 = Quotes
+6 = IT Box Co
+7 = Goal:
+8 = Quotes:
+
+[Enterprise_Tiered_Storage_Substudy_Definitions]
+default = Concept Validation|Ensure that the directions for tiered storage management are sound.
+
+[Enterprise_Tiered_Storage_Substudy_default_Noises]
+1 = ITBoxCo  Tiered Storage Version 1.0
+2 = ITBoxCo
+3 = ITBoxCo’s
+4 = Customer Quotes
+5 = Quotes
+6 = IT Box Co
+7 = Goal:
+8 = Quotes:
+
+[Enterprise_File_Storage_Substudy_Definitions]
+default = Concept Validation|Ensure that the directions for file storage management meet market needs.
+
+[Enterprise_File_Storage_Substudy_default_Noises]
+1 = ITBoxCo  NAS and File Awareness Version 1.0
+2 = ITBoxCo
+3 = ITBoxCo’s
+4 = Customer Quotes
+5 = Quotes
+6 = IT Box Co
+7 = Goal:
+8 = Quotes:
+
+[Electronically_Stored_Information_Substudy_Definitions]
+default = Problem Discovery|Gain a clear understanding of the problem space to build a proper product plan.
+
+[Electronically_Stored_Information_Substudy_default_Noises]
+1 = IT Box Co  Electrically Stored Information Version 1.0
+2 = ITBoxCo
+3 = ITBoxCo’s
+4 = Customer Quotes
+5 = Quotes:
+6 = IT Box Co
+7 = Goal:
+8 = Quotes
+9 = Content Services Interview
+10 = Content Services
+11 = IT Box Co  Content Services & Storage Hardware Version 1.0
+12 = IT Box Co  Content Services Version 1.0
+13 = Version 1.0
+14 = & Storage Hardware
+15 = & Storage Hardware Version 1.0
+
+[Converged_Infrastructure_Substudy_Definitions]
+default = Problem Discovery|Gain a clear understanding of the problem space to build a proper product plan.
+
+[Converged_Infrastructure_Substudy_default_Noises]
+1 = Customer Visit Report Summary
+2 = Detailed Data from the interview:
+3 = Customer Visit Report Summary
+4 = IT Box Co
+5 = ITBoxCo
+6 = IT Box Co IC Concepts
+7 = Goal:
+8 = IC Concepts
+9 = IC Validation Visit
+10 = Quotes:
+11 = Quotes
+12 = Outcome:
+13 = CONCLUSION:
+
+[Hyper-Converged_Infrastructure_Substudy_Definitions]
+default = Problem Discovery|Gain a clear understanding of the problem space to build a proper product plan.
+
+[Hyper-Converged_Infrastructure_Substudy_default_Noises]
+1 = IT Box Co GLOBAL INFORMATION SOLUTIONS DIVISION  Hyper Converged  Version1.0
+2 = IT Box Co GLOBAL INFORMATION SOLUTIONS DIVISION  Hyper Converged  Version 1.0
+3 = IT Box Co GLOBAL INFORMATION SOLUTIONS DIVISION
+4 = GLOBAL INFORMATION SOLUTIONS DIVISION
+5 = Tatsuo Higuchi
+6 = Satoshi Ishiguchi
+7 = (GOTP)
+8 = Name:
+9 = inaudible
+10 = Donna:
+11 = Tatsuo:
+12 = crosstalk
+13 = Satoshi:
+14 = IT Box Co
+15 = Koichiro:
+16 = Vincent F:
+17 = Name: Hyper Converged
+18 = (OTP)
+19 = Attendee:
+20 = Customer:
+
+
+
 [Customer_Insights_Substudy_Definitions]
 default = Problem Discovery|2014 work to initially understand the problem. 
 1 = Competitive Analysis|Late 2019 efforts to understand if Aha! has solved the problem. 
 2 = User Validation|In 2021 evaluate if the problem is still acute and identify target users.
 
-[Customer_Insights_Substudy_Default_Questions]
+[Customer_Insights_Substudy_default_Questions]
 1 = Do you know if there are any customer study materials and where you might go to find them?|True|This relates to the history of current content.
 2 = If you are aware of the materials is the current format sufficient or insufficient for your needs?|True|This relates to the history of current content.
 3 = How would you like to explore the materials to get the best possible benefit?|True|Maps to how a user wants to experiencing the content and collateral.
@@ -78,21 +185,21 @@ default = Problem Discovery|2014 work to initially understand the problem.
 11 = If you do not how do you consolidate your own information to produce release, plan, other content?|True|Focuses on what outcomes and consumption practices are needed.
 12 = Are there other kinds of data to include in conjunction with customer study data/materials, and if so can you describe the data?|False|This is a wrap up question to the interview.
 
-[Customer_Insights_Substudy_Default_Theme_Definitions]
+[Customer_Insights_Substudy_default_Theme_Definitions]
 5 = Requirements and Planning|What can and should be done with output from customer and competitive research|12
 6 = Personal Strategy|Other uses for customer and competitive insights be used|11
 7 = Concept Validation|Another usage scenario for customer and competitive insight|8
 8 = Abstract to Detailed|How to access and experience insight content|14
 9 = Key-Term Analysis|What the most important approach is to analysis of insight collateral|19
 
-[Customer_Insights_Substudy_Default_Theme_Frequencies]
+[Customer_Insights_Substudy_default_Theme_Frequencies]
 5 = HDS|12
 6 = HDS|11
 7 = HDS|8
 8 = HDS|14
 9 = HDS|19
 
-[Customer_Insights_Substudy_Default_Theme_Quotes]
+[Customer_Insights_Substudy_default_Theme_Quotes]
 5 = Uh, I think that one of the key things is what are the customer initiatives. This will help me better frame my products and directions accordingly. Level
     of investment from customers as in budget. Are they taking the time to look at competitors. This will help me determine which requirements are the most
     relevant. These kinds of outputs would be great! It would be better than the current state of affairs where we have to continually go back to the field
@@ -121,6 +228,12 @@ default = Problem Discovery|2014 work to initially understand the problem.
     miss customers that we don’t have or haven’t acquired.|Scott Nacey, HDS<->It depends on whether or not I’m going into an area I don’t know very well as
     opposed to this is a topic I understand and I’m going to go more grass roots. Existing market: Bottom up, Emerging market: top down.|Charles Hickman, HDS
 
+[Customer_Insights_Substudy_default_Noises]
+1 = CONCLUSION:
+2 = Questions:
+3 = Title:
+4 = Interview notes and questions for determining feature set
+
 [Customer_Insights_Substudy_1_Theme_Definitions]
 1 = Standard Interview Process|A consistent approach to performing stakeholder, user and competitive interviews|37
 2 = Standard Interview Tooling|Provide a common set of tooling the enables a standard interview process|49
@@ -132,6 +245,27 @@ default = Problem Discovery|2014 work to initially understand the problem.
 2 = Aha|49
 3 = Aha|15
 4 = Aha|14
+
+[Customer_Insights_Substudy_1_Noises]
+1 = Topics Careers Collaboration Ideas Launches Marketing Methodologies Releases Requirements Research Roadmaps Strategy Tools Aha!
+2 = Topics Careers Collaboration Ideas Launches Marketing
+3 = Methodologies Releases Requirements Research Roadmaps Strategy
+4 = Tools Aha!
+5 = Aha!
+6 = You Might Also Like Topics
+7 = About Terms Privacy Contact Sponsored by Aha!
+8 = About Terms Privacy Contact Sponsored by
+9 = Comment Like 1 Keith Brown VP Marketing,
+10 = Comment Like 1
+11 = Comment Like 2
+12 = Comment Like 3
+13 = Comment Like 4
+14 = 3 years ago
+15 = 2 years ago
+16 = Topics You Might Also Like Careers Collaboration
+17 = Comment Like 5
+18 = 10 months ago
+19 = Comment Like 12
 
 [Customer_Insights_Substudy_1_Theme_Quotes]
 1 = Interview recordings is a nice thing to have but honestly I almost never listen to them as it is very time consuming and actually you do not really
@@ -145,6 +279,30 @@ default = Problem Discovery|2014 work to initially understand the problem.
     the visionary and product owner identified 3 users from anecdotal vs. actual customer interviews in developing the product.|Ruby Menon, Aha
 4 = Start with observing what your prospective customer wants to do, then interview and survey. That will tell you exactly the problem(s) they are
     trying to solve. Then get your designers and development team involved in identifying innovative ways to help them do it faster and better.|David Fradin, Aha
+
+[Customer_Insights_Substudy_2_Noises]
+1 = Audio ﬁle
+2 = Title: Mediumroast, Inc. Phase 2 Interviews
+3 = Title:
+4 =  1. 
+5 =  a. 
+6 =  b. 
+7 =  c. 
+8 = Intention: Answer key questions about PM tooling, buyer personas and overall concept
+9 = Title:  Interview with
+10 = Interview with
+11 = To determine whether there is a need for Medium Roast oﬀerings by interviewing Product Managers and individuals with similar or related 
+    roles in the Informa@on Technology Industry
+12 = To determine whether there is a need for Medium Roast oﬀerings by interviewing Product Managers and individuals with similar or related 
+    roles in the Information Technology Industry
+13 = Recording.mp4
+14 = Transcript
+15 = Output.mp4
+16 = Mee4ng
+17 = Mee3ng
+18 = Mee6ng
+19 = audio_only.m4a
+20 = Audio ﬁle
 
 [Customer_Insights_PRFAQ]
 Introduction = This Customer Insights study includes two phases separated by 5 years.  The first phase was performed as as a part of a 2014 research project that emphasized A/B testing for a customer study indexing application.
