Updated to better report on themes

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -3,6 +3,6 @@ font_type=Avenir Next
 font_size=11
 font_measure=pt
 logo_image=./mr_logo_with_text.png
-organization_name=Mediumroast, Inc.
-copyright_notice=Copyright 2021, Mediumroast, Inc. All rights reserved.
+organization_name=Pavilion Data Systems, Inc.
+copyright_notice=Copyright 2022, Pavilion Data Systems, Inc. All rights reserved.
 confidential_notice=Company Confidential, Shared under mutual NDA only.
