--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -2,7 +2,7 @@
 font_type=Avenir Next
 font_size=11
 font_measure=pt
-logo_image=./mr_logo_with_text.png
+logo_image=./pavilio_logo.png
 organization_name=Pavilion Data Systems, Inc.
 copyright_notice=Copyright 2022, Pavilion Data Systems. All rights reserved.
 confidential_notice=Company Confidential, Shared under mutual NDA only.
