Changed output of list_studies added exludes to report

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -2,7 +2,13 @@
 font_type=Avenir Next
 font_size=11
 font_measure=pt
+table_font_size=10
 logo_image=./pavilio_logo.png
 organization_name=Pavilion Data Systems, Inc.
 copyright_notice=Copyright 2022, Pavilion Data Systems. All rights reserved.
 confidential_notice=Company Confidential, Shared under mutual NDA only.
+
+[THEME_FORMAT]
+tag_font_color=
+tag_font_size=9
+
